--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -27,7 +27,7 @@ tab_bar_style           separator
 tab_separator           "｜"
 
 # FONT
-font_size               16
+font_size               17
 font_family             JetBrains Mono
 
 # CLIPBOARD
@@ -35,44 +35,44 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-# VSCODE DARK by https://github/mofiqul
-foreground              #d4d4d4
-background              #1e1e1e
-selection_foreground    #1e1e1e
-selection_background    #d7ba7d
-url_color               #0087BD
-inactive_border_color   #222222
-active_border_color     #222222
-active_tab_foreground   #D4D4D4
-active_tab_background   #373737
-active_tab_font_style   bold-italic
-inactive_tab_foreground #5A5A5A
-inactive_tab_background #262626
-inactive_tab_font_style normal
-# black
-color0   #1e1e1e
-color8   #808080
-# red
-color1   #f44747
-color9   #f44747
-# green
-color2   #608b4e
-color10  #608b4e
-# yellow
-color3   #dcdcaa
-color11  #dcdcaa
-# blue
-color4  #569cd6
-color12 #569cd6
-# magenta
-color5   #c678dd
-color13  #c678dd
-# cyan
-color6   #56b6c2
-color14  #56b6c2
-# white
-color7   #d4d4d4
-color15  #d4d4d4
+## VSCODE DARK by https://github/mofiqul
+#foreground              #d4d4d4
+#background              #1e1e1e
+#selection_foreground    #1e1e1e
+#selection_background    #d7ba7d
+#url_color               #0087BD
+#inactive_border_color   #222222
+#active_border_color     #222222
+#active_tab_foreground   #D4D4D4
+#active_tab_background   #373737
+#active_tab_font_style   bold-italic
+#inactive_tab_foreground #5A5A5A
+#inactive_tab_background #262626
+#inactive_tab_font_style normal
+## black
+#color0   #1e1e1e
+#color8   #808080
+## red
+#color1   #f44747
+#color9   #f44747
+## green
+#color2   #608b4e
+#color10  #608b4e
+## yellow
+#color3   #dcdcaa
+#color11  #dcdcaa
+## blue
+#color4  #569cd6
+#color12 #569cd6
+## magenta
+#color5   #c678dd
+#color13  #c678dd
+## cyan
+#color6   #56b6c2
+#color14  #56b6c2
+## white
+#color7   #d4d4d4
+#color15  #d4d4d4
 
 ## GRUVBOX by morhetz@gmail.com, adapted by witekdomitrz@gmail.com
 #cursor                  #fbf1c7
@@ -175,3 +175,26 @@ color15  #d4d4d4
 #color14 #3e953a
 #color7 #bbbbbb
 #color15 #ffffff
+
+# MATERIAL DARKER
+background            #212121
+foreground            #e4e4e4
+cursor                #dedede
+selection_background  #dedede
+color0                #212121
+color8                #424242
+color1                #b7141e
+color9                #e83a3f
+color2                #457b23
+color10               #7aba39
+color3                #f5971d
+color11               #fee92e
+color4                #134eb2
+color12               #53a4f3
+color5                #550087
+color13               #a94dbb
+color6                #0e707c
+color14               #26bad1
+color7                #eeeeee
+color15               #d8d8d8
+selection_foreground  #222221
