--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,7 +29,7 @@ tab_separator           "|"
 
 # FONT
 font_size               18
-font_family             IBM Plex Mono
+font_family             SF Mono
 
 # CLIPBOARD
 detect_urls             yes
