--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ hide_window_decorations yes
 # WINDOW
 map ctrl+shift+enter    new_window_with_cwd
 enable_audio_bell       no
-background_opacity      0.81
+#background_opacity      0.81
 window_padding_width    0
 remember_window_size    no
 initial_window_width    81c
@@ -37,9 +37,9 @@ copy_on_select          no
 strip_trailing_spaces   always
 
 cursor                  #FFFFFF
-background              #101010
 active_border_color     #222222
 inactive_border_color   #222222
+#background              #101010
 
 ## inspired github
 #background            #ffffff
