--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,11 +1,11 @@
-# MacOS TWEAKS
+# === MacOS ===
 macos_quit_when_last_window_closed yes
 hide_window_decorations yes
 
-# WINDOW
+# === WINDOW ===
 map ctrl+shift+enter    new_window_with_cwd
 enable_audio_bell       no
-#background_opacity      0.83
+#background_opacity      0.9
 window_padding_width    0
 remember_window_size    no
 initial_window_width    81c
@@ -16,26 +16,27 @@ map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
 mouse_hide_wait         0.01
 
-# EDITOR
+# === EDITOR ===
 editor                  nvim
 input_delay             2
-shell_integration       no-cursor
-cursor_blink_interval   0.27
+#shell_integration       no-cursor
+cursor_blink_interval   0.0
 
-# TABS
+# === TABS ===
 tab_bar_style           separator
 tab_separator           "|"
 
-# FONT
+# === FONT ===
 font_size               16
-font_family             SF Mono
+font_family             JetBrains Mono
 
-# CLIPBOARD
+# === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-cursor                  #FFF0F0
+# === COLORS ===
+cursor                  #FAED27
 active_border_color     #222222
 inactive_border_color   #222222
 background              #101010
