--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,7 +5,7 @@ hide_window_decorations yes
 # === WINDOW ===
 map ctrl+shift+enter    new_window_with_cwd
 enable_audio_bell       no
-#background_opacity      0.9
+#background_opacity     0.9
 window_padding_width    0
 remember_window_size    no
 initial_window_width    81c
@@ -19,8 +19,8 @@ mouse_hide_wait         0.01
 # === EDITOR ===
 editor                  nvim
 input_delay             2
-#shell_integration       no-cursor
-cursor_blink_interval   0.0
+shell_integration       no-cursor
+cursor_blink_interval   0.2
 
 # === TABS ===
 tab_bar_style           separator
@@ -29,16 +29,14 @@ tab_separator           "|"
 # === FONT ===
 font_size               16
 font_family             JetBrains Mono NL
-bold_font               JetBrains Mono NL Bold
-italic_font             JetBrains Mono NL Italic
 
 # === CLIPBOARD ===
 detect_urls             yes
-copy_on_select          no
+copy_on_select          yes
 strip_trailing_spaces   always
 
 # === COLORS ===
-cursor                  #FAED27
+cursor                  #FFFF00
 active_border_color     #222222
 inactive_border_color   #222222
-background              #101000
+background              #0F0F0F
