--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -20,7 +20,7 @@ mouse_hide_wait         0.01
 editor                  nvim
 input_delay             2
 shell_integration       no-cursor
-cursor_blink_interval   0.2
+cursor_blink_interval   0.0
 
 # === TABS ===
 tab_bar_style           separator
@@ -39,4 +39,4 @@ strip_trailing_spaces   always
 cursor                  #FFFF00
 active_border_color     #222222
 inactive_border_color   #222222
-background              #0F0F0F
+background              #090909
