--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -18,7 +18,7 @@ mouse_hide_wait         0.01
 # === EDITOR ===
 editor                  nvim
 input_delay             2
-shell_integration       no-cursor
+#shell_integration       no-cursor
 cursor_blink_interval   0.0
 
 # === TABS ===
@@ -38,4 +38,3 @@ strip_trailing_spaces   always
 cursor                  #FFFFF0
 active_border_color     #222222
 inactive_border_color   #222222
-#background              #090909
