--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,7 +11,7 @@ bell_border_color       #000010
 enabled_layouts fat:bias=72;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
-mouse_hide_wait         0.01
+#mouse_hide_wait         0.01
 # === EDITOR ===
 editor                  nvim
 input_delay             2
@@ -28,6 +28,6 @@ detect_urls             yes
 copy_on_select          yes
 strip_trailing_spaces   always
 # === COLORS ===
-cursor                  #FFFFF0
+cursor                  #CEFAO5
 active_border_color     #222222
 inactive_border_color   #222222
