--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -31,3 +31,5 @@ strip_trailing_spaces   always
 cursor                  #CEFAO5
 active_border_color     #222222
 inactive_border_color   #222222
+selection_background    #CEFA05
+selection_foreground    #000000
