--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ remember_window_size    no
 initial_window_width    90c
 initial_window_height   27c
 bell_border_color       #000010
-enabled_layouts fat:bias=72;full_size=1;mirrored=false
+enabled_layouts tall:bias=60;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
 #mouse_hide_wait         0.01
@@ -31,5 +31,5 @@ strip_trailing_spaces   always
 cursor                  #CEFAO5
 active_border_color     #222222
 inactive_border_color   #222222
-selection_background    #CEFA05
+selection_background    #FFFFFF
 selection_foreground    #000000
