--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,9 +8,10 @@ remember_window_size    no
 initial_window_width    90c
 initial_window_height   27c
 bell_border_color       #000010
-enabled_layouts tall:bias=60;full_size=1;mirrored=false
+enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
+#background_opacity      0.86
 #mouse_hide_wait         0.01
 # === EDITOR ===
 editor                  nvim
