--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "zsh/zsh-autosuggestions"]
   path = zsh/.zsh/zsh-autosuggestions
   url = https://github.com/zsh-users/zsh-autosuggestions
+[submodule "zsh/.zsh/zsh-autosuggestions"]
+	path = zsh/.zsh/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions
