--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,7 +4,7 @@ hide_window_decorations yes
 # === WINDOW ===
 enable_audio_bell       no
 window_padding_width    0
-remember_window_size    no
+remember_window_size    yes
 initial_window_width    90c
 initial_window_height   27c
 bell_border_color       #000010
@@ -12,7 +12,7 @@ enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
 mouse_hide_wait         0.01
-background_opacity      0.93
+#background_opacity      0.93
 # === EDITOR ===
 editor                  nvim
 input_delay             2
@@ -22,7 +22,7 @@ cursor_blink_interval   0.0
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
-font_size               17
+font_size               19
 font_family             JetBrains Mono NL
 # === CLIPBOARD ===
 detect_urls             yes
