--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -32,6 +32,10 @@ cursor                  #CEFAO5
 active_border_color     #222222
 bell_border_color       #000010
 inactive_border_color   #222222
+active_tab_background   #000000
+active_tab_foreground   #FFFFFF
+inactive_tab_background #000000
+inactive_tab_foreground #555555
 selection_background    #FFFFFF
 selection_foreground    #000000
 
