--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -28,7 +28,7 @@ detect_urls             yes
 copy_on_select          yes
 strip_trailing_spaces   always
 # === COLORS ===
-#
+
 # KARONDA
 cursor                  #CEFAO5
 active_border_color     #222222
@@ -40,3 +40,69 @@ inactive_tab_background #000000
 inactive_tab_foreground #555555
 selection_background    #FFFFFF
 selection_foreground    #000000
+
+## DAWNFOX
+#background              #FAF4ED
+#foreground              #575279
+#selection_background    #D0D8D8
+#selection_foreground    #575279
+#url_color               #618774
+#cursor none
+#active_border_color     #286983
+#inactive_border_color   #BDBFC9
+#bell_border_color       #D7827E
+#active_tab_background   #286983
+#active_tab_foreground   #EBE5DF
+#inactive_tab_background #D0D8D8
+#inactive_tab_foreground #9893A5
+#color0                  #575279
+#color1                  #B4637A
+#color2                  #618774
+#color3                  #EA9D34
+#color4                  #286983
+#color5                  #907AA9
+#color6                  #56949F
+#color7                  #E5E9F0
+#color8                  #5F5695
+#color9                  #C26D85
+#color10                 #629F81
+#color11                 #EEA846
+#color12                 #2D81A3
+#color13                 #9A80B9
+#color14                 #5CA7B4
+#color15                 #E6EBF3
+#color16                 #D7827E
+#color17                 #D685AF
+
+## DUSKFOX
+#background              #232136
+#foreground              #E0DEF4
+#selection_background    #433C59
+#selection_foreground    #E0DEF4
+#url_color               #A3BE8C
+#cursor none
+#active_border_color     #569FBA
+#inactive_border_color   #4B4673
+#bell_border_color       #EA9A97
+#active_tab_background   #569FBA
+#active_tab_foreground   #191726
+#inactive_tab_background #433C59
+#inactive_tab_foreground #817C9C
+#color0                  #393552
+#color1                  #EB6F92
+#color2                  #A3BE8C
+#color3                  #F6C177
+#color4                  #569FBA
+#color5                  #C4A7E7
+#color6                  #9CCFD8
+#color7                  #E0DEF4
+#color8                  #47407D
+#color9                  #F083A2
+#color10                 #B1D196
+#color11                 #F9CB8C
+#color12                 #65B1CD
+#color13                 #CCB1ED
+#color14                 #A6DAE3
+#color15                 #E2E0F7
+#color16                 #EA9A97
+#color17                 #EB98C3
