--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,12 +5,12 @@ hide_window_decorations yes
 enable_audio_bell       no
 window_padding_width    0
 remember_window_size    no
-initial_window_width    85c
-initial_window_height   31c
+initial_window_width    120c
+initial_window_height   40c
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
-mouse_hide_wait         0.01
+#mouse_hide_wait         0.01
 #background_opacity      0.7
 # === EDITOR ===
 editor                  nvim
