--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -16,13 +16,13 @@ mouse_hide_wait         0.01
 editor                  nvim
 input_delay             2
 shell_integration       no-cursor
-cursor_blink_interval   0.18
+cursor_blink_interval   0.0
 # === TABS ===
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
 font_size               16
-font_family             Unifont
+font_family             Input
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
@@ -42,8 +42,8 @@ strip_trailing_spaces   always
 #selection_background    #FFFFFF
 #selection_foreground    #000000
 
-background #111111
-foreground #fcfad4
+background #141414
+foreground #e8e8d6
 cursor none
 selection_background #464d91
 color0 #919191
