--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,8 +5,8 @@ hide_window_decorations yes
 enable_audio_bell       no
 window_padding_width    0
 remember_window_size    no
-initial_window_width    200c
-initial_window_height   50c
+initial_window_width    90c
+initial_window_height   36c
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
@@ -15,7 +15,7 @@ scrollback_lines        900
 # === EDITOR ===
 editor                  nvim
 input_delay             1
-#shell_integration       no-cursor
+shell_integration       no-cursor
 cursor_blink_interval   0.0
 # === TABS ===
 tab_bar_style           separator
@@ -41,25 +41,25 @@ inactive_tab_foreground #555555
 selection_background    #FFFFFF
 selection_foreground    #000000
 
-#JELLYBEANS
-background #141414
-foreground #e8e8d6
-cursor none
-selection_background #464d91
-color0 #919191
-color8 #bdbdbd
-color1 #e17373
-color9 #ffa0a0
-color2 #94b978
-color10 #bddeab
-color3 #ffb97b
-color11 #ffdba0
-color4 #96bddb
-color12 #b1d7f6
-color5 #e1c0fa
-color13 #fbdaff
-color6 #00988e
-color14 #19b2a7
-color7 #dedede
-color15 #ffffff
-selection_foreground #111111
+##JELLYBEANS
+#background #141414
+#foreground #e8e8d6
+#cursor none
+#selection_background #464d91
+#color0 #919191
+#color8 #bdbdbd
+#color1 #e17373
+#color9 #ffa0a0
+#color2 #94b978
+#color10 #bddeab
+#color3 #ffb97b
+#color11 #ffdba0
+#color4 #96bddb
+#color12 #b1d7f6
+#color5 #e1c0fa
+#color13 #fbdaff
+#color6 #00988e
+#color14 #19b2a7
+#color7 #dedede
+#color15 #ffffff
+#selection_foreground #111111
